--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         
     </nav>
-   
+     <p class="pu">Rfxehj gblfhfc</p>
 </header>
 
 <h1 class="xuina">Качуро Андрей Александорович</h1>
@@ -26,6 +26,7 @@
         <p class="description">Я Андрей Качро Александоровия такой себе художник но что поделать? Рисую как карта ляжет и то если ляжет </p>
         <p class="description">Я ценю моих клиентов поэтому это единственные далба... люди в которых я не кидаю говно</p>
         <a href="cv.pdf" class="download-btn">Скачать резюме</a>
+          <a href="https://www.tinkoff.ru/cf/6krGboI2KK3" class="href">На лечение бедного художника от слова худа </a>
     </div>
 </section>
 <section id="work">
